force-app/main/default/objects/AcctSeedERP__Purchase_Order_Line__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <formula>TEXT(AcctSeedERP__Purchase_Order__r.AcctSeedERP__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Type</label>
    <type>Text</type>
</CustomField>