force-app/main/default/objects/AcctSeedERP__Purchase_Order_Line__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>IF(SalesOrderLine__c != null, SalesOrderLine__r.Quote_Line_Item__r.Product_Code__c, AcctSeedERP__Product__r.ProductCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>