force-app/main/default/objects/AcctSeedERP__Purchase_Order_Line__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+AcctSeedERP__Purchase_Order__c,   AcctSeedERP__Purchase_Order__r.Purchase_Order_Number__c  , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>