force-app/main/default/objects/AcctSeedERP__Purchase_Order_Line__c/fields/SalesOrderLine__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>